--- a/styles/style.css
+++ b/styles/style.css
@@ -40,3 +40,25 @@ nav {
 	flex-direction: column;
 }
 
+li {
+	list-style-type: none;
+}
+
+section {
+	position: relative;
+	width: 100;
+	overflow: hidden;
+}
+
+img {
+	width: 100%;
+	object-fit: cover;
+}
+
+a {
+	list-style-type: none;
+	/* color: white; */
+}
+
+
+
