--- a/styles/style.css
+++ b/styles/style.css
@@ -46,13 +46,31 @@ li {
 
 section {
 	position: relative;
-	width: 100;
+	width: 100%;
 	overflow: hidden;
+}
+
+section div {
+	position: absolute;
+	display: block;
+	width: 100%;
+	bottom: 1rem;
+	padding: 1rem;
+}
+
+section a {
+	list-style-type: none;
+	left: 0%;
+	margin-right: 1em;
+	color: white;
 }
 
 img {
 	width: 100%;
 	object-fit: cover;
+	/* position: absolute; */
+	top: 0%;
+	height: 100%;
 }
 
 a {
@@ -60,5 +78,85 @@ a {
 	/* color: white; */
 }
 
+h2 { 
+	color: white;
+}
 
+footer h2 {
+	color: black;
+}
+
+footer details summary::marker {
+	content: "";
+} 
+
+footer details summary::-webkit-details-marker {
+	display: none;
+}
+
+section ul {
+	display: flex;
+	overflow: auto;
+	scroll-snap-type: mandatory;
+	scroll-behavior: smooth;
+	overscroll-behavior-x: contain;
+
+	scrollbar-width: thin;
+	scrollbar-color: black transparant; 
+}
+
+section section ul li {
+	flex-basis: 100%;
+	flex-shrink: 0;
+	scroll-snap-align: center;
+}
+
+section section h2 {
+	color: black;
+	text-align: center;
+}
+
+section section p {
+	text-align: center;
+}
+
+section ul {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	overflow: scroll;
+}
+
+section ul li {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	width: 65vw;
+}
+
+section ul li img {
+	width: 100%;
+	grid-row-start: 1;
+	grid-row-end: 6;
+	grid-column-start: 1;
+	grid-column-end: 6;
+	object-fit: cover;
+}
+
+
+
+/* main section:nth-of-type(1) {
+	background-color: red;
+} */
+
+
+
+@media (width > 767px) {
+	ul {
+		flex-direction: row;
+	}
+
+	section {
+		flex-direction: row;
+	}
+}
 
