--- a/styles/algemeen.css
+++ b/styles/algemeen.css
@@ -43,3 +43,17 @@ p {
 }
 
 
+@media (min-width: 865px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/* main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+} */
+
+
