--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,7 @@ body {
 	padding: 0;
 }
 
-nav {
-	display: flex;
-	flex-direction: column;
-}
+
 
 li {
 	list-style-type: none;
@@ -48,6 +45,7 @@ section {
 	position: relative;
 	width: 100%;
 	overflow: hidden;
+	padding: .1rem;
 }
 
 section div {
@@ -74,13 +72,16 @@ img {
 
 a {
 	list-style-type: none;
-	/* color: white; */
 }
 
 h2 { 
 	color: white;
 	top: 0;
+	position: sticky;
+	top: 0;
 }
+
+/* Footer */
 
 footer h2 {
 	color: black;
@@ -97,48 +98,102 @@ footer details summary::-webkit-details-marker {
 section:nth-of-type(1) {
 	grid-column-start: 1;
 	grid-column-end: -1;
+	margin-top: 0%;
 }
 
-section:nth-of-type(2) ul li {
+/* Section 2 */
+
+section:nth-of-type(2) h2 {
+	color: black;
+	text-align: center;
+}
+
+section:nth-of-type(2) ul {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	overflow: auto;
+	scroll-snap-type:x mandatory;
+	scroll-behavior: smooth;
+	overscroll-behavior-x: contain;
+
+	scrollbar-width: none;
+	scrollbar-color: black transparant; 
+
+	scroll-marker-group: after;
+}
+
+ul::scroll-marker-group {
+  height:3em;
+  /* beetje witruimte aan de bovenkant en zijkanten */
+  margin:1em 3.5em 0;
+  
+  display: flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  align-content:center;
+  row-gap:.25em;
+  column-gap:.5em;
+}
+
+li::scroll-marker {
+  /* net als een after */
+  /* het attribuut komt uit de html - is voor screenreaders */
+  content: '' / 'naar' attr(data-label);
+  
+  /* styling bolletje */
+  width:2em;
+  height: 0.25em;
+  background-color:canvas;
+  border-radius:0.25em;
+  transition:.25s;
+}
+
+li::scroll-marker:target-current {
+  background: black;
+}
+
+section:nth-of-type(2) li {
 	flex-basis: 100%;
 	flex-shrink: 0;
 	scroll-snap-align: center;
 }
 
-section:nth-of-type(2) {
-	color: black;
-	text-align: center;
-}
-
-section p {
-	text-align: center;
-}
-
-main > section:nth-of-type(2) section ul {
+section:nth-of-type(2) a{
 	display: flex;
-	overflow: auto;
-	scroll-snap-type: mandatory;
-	scroll-behavior: smooth;
-	overscroll-behavior-x: contain;
-
-	scrollbar-width: thin;
-	scrollbar-color: black transparant; 
+	justify-content: center;
+	align-items: center;
 }
 
-section:nth-of-type(5) ul {
+section:nth-of-type(2) a {
+	color: blue;
+}
+
+
+
+/* Section 6 */
+
+section:nth-of-type(6) {
+	grid-column-start: 1;
+	grid-column-end: -1;
+}
+
+section:nth-of-type(6) ul {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	overflow: scroll;
+	margin: 0;
+	padding: 0;
 }
 
-section:nth-of-type(5) li {
+section:nth-of-type(6) li {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr auto auto;
 	width: 65vw;
 }
 
-section:nth-of-type(5) img {
+section:nth-of-type(6) img {
 	width: 100%;
 	grid-row-start: 1;
 	grid-row-end: 6;
@@ -147,9 +202,31 @@ section:nth-of-type(5) img {
 	object-fit: cover;
 }
 
+section:nth-of-type(6) h2, p {
+	color: black;
+	font-size: 0.7rem;
+	grid-column: 1 / -1;
+	grid-row: 2;
+	margin: 0;
+}
 
-@keyframes spin [
+section:nth-of-type(6) p {
+	grid-row: 3;
+	text-align: left;
+	margin: 0;
+}
+
+@media (min-width: 865px) {
+
+	section:nth-of-type(6) li {
+		width: 25vw;
+	}
+}
+
+
+@keyframes spin {
 	to {
 		rotate: 1turn
 	}
-} 
+}
+	
