--- a/styles/style.css
+++ b/styles/style.css
@@ -35,8 +35,6 @@ body {
 	padding: 0;
 }
 
-
-
 li {
 	list-style-type: none;
 }
@@ -205,7 +203,8 @@ section:nth-of-type(6) img {
 section:nth-of-type(6) h2, p {
 	color: black;
 	font-size: 0.7rem;
-	grid-column: 1 / -1;
+	grid-column-start: 1;
+	grid-column-end: -1;
 	grid-row: 2;
 	margin: 0;
 }
