--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -1,80 +1,188 @@
-main {
+
+* {
+    box-sizing: border-box;
+}
+
+/* filter all */
+main ul:nth-of-type(1) {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    padding: 0;
+} 
+
+main ul:nth-of-type(1) li {
+    margin: 1rem;
+}
+
+main ul:nth-of-type(1) a {
+    text-decoration: none;
+    color: black;
+}
+
+/* Carousel ul  */
+
+main > ul:nth-of-type(2) > li > a > ul {
+    display: flex;
+    overflow: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    overscroll-behavior-x: contain;
+    scrollbar-width: thin;
+    scrollbar-color: black;
+    position: relative;
+    z-index: 5;
+}
+
+main > ul:nth-of-type(2) > li > a > ul > li img {
+    width: 100%;
+}
+
+main ul:nth-of-type(2) > li > a > ul > li {
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+}
+
+main ul:nth-of-type(2) {
+    margin: 0;
+    padding: 0;
+
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+    width: 100vw;
+    min-height: 100vw;
 }
 
-section {
-	position: relative;
-	width: 100%;
-	overflow: hidden;
-	padding: .1rem;
-    margin: .1rem;
+main ul:nth-of-type(2) li {
+    display: flex;
+    flex-direction: column;
 }
 
-section div {
-	position: static;
-    text-align: left;
+main ul:nth-of-type(2) li a {
+    position: relative;
 }
 
-section a {
-	list-style-type: none;
-	left: 0%;
-	margin-right: 1em;
-	color: white;
-}
 
-img {
-	width: 100%;
-	object-fit: cover;
-	top: 0%;
-	height: 100%;
-}
 
-a {
-	list-style-type: none;
-}
+/* Dit zijn de knoppen links en rechts */
 
-h2 { 
-	color: black;
-	top: 0;
-	position: sticky;
-	top: 0;
-    grid-column-start: 1;
-    grid-column-end: -1;
-}
+main ul:nth-of-type(2) li a ul::scroll-button(*) {
+    width: 1rem;
+    aspect-ratio: 1;
+    margin: 1em 0 0;
+    padding: 0;
+    font-size: x-large;
 
-section > p:nth-of-type(1) {
+    background: none;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+
     position: absolute;
-    top: .5rem;
-    color: black;
-    margin: 0;
+    top: 40%;
+    transform: translateY(-50%);
+    z-index: 5;
+} 
+
+main ul:nth-of-type(2) li a ul::scroll-button(right) {
+    content: '→' / 'Next';
+    right: 1rem;
+}
+
+main ul:nth-of-type(2) li a ul::scroll-button(left) {
+    content: '←' / 'Previous';
+    left: 1rem;
+}
+
+main ul:nth-of-type(2) li a ul:scroll-button(*):disabled {
+    opacity: .4;
+}
+
+/* Grid li 5 en 18 */
+
+li:nth-of-type(5), li:nth-of-type(18){
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+li img {
+    width: 100%;
+    order: -1; 
+}
+
+main li a {
+    width: 100%;
+    height: 100%;
+}
+
+main ul:nth-of-type(2) li img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* New in */
+
+main ul:nth-of-type(2) li a p:first-of-type {
+    position: absolute; 
+    z-index: 5;
+    top: 2rem;
+    left: .5rem;
+}
+
+/* De p en h3 stylen */
+
+main ul:nth-of-type(2) li a p:last-of-type {
+    margin: .5rem;
 }
 
 h3 {
-    margin: 0;
-    font-size: .9rem;
-    margin-left: 1em;
+    margin: .5rem;
 }
 
-section div p:nth-last-of-type(1) {
-    text-align: left;
-    margin: 0;
-    margin-left: 1em;
-    font-size: .9rem;
-    margin-bottom: 1em;
+main > ul:nth-of-type(2) > li > a {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    color: black;
+    text-decoration: none;
 }
 
-section:nth-of-type(5) {
-    grid-column-start: 1;
-    grid-column-end: -1;
+main > ul:nth-of-type(2) > li > a > ul {
+    order: -1;
 }
 
-@media (min-width: 865px) {
-    main {
-        display: grid;
+main ul:nth-of-type(2) li:nth-of-type(5) a h3, main ul:nth-of-type(2) li:nth-of-type(5) a p, main ul:nth-of-type(2) li:nth-of-type(18) a h3, main ul:nth-of-type(2) li:nth-of-type(18) a p {
+    position: absolute;
+    color: white;
+    z-index: 2;
+    margin-left: 1rem;
+    bottom: 2rem;
+}
+
+
+
+
+/* Groter maken van scherm */
+
+@media (width > 865px) {
+    main ul:nth-of-type(2) {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
     }
-    
+
+    li:nth-of-type(5) {
+        grid-column-start:3;
+        grid-row-start:1;
+        grid-column-end:5;
+        grid-row-end:3;
+    }
+
+    li:nth-of-type(18) {
+        grid-column-start: 1;
+        grid-row-start: 6;
+        grid-column-end: 3;
+        grid-row-end: 8;
+    }
     
 }
